nginx-canary-smi/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  workloadRef:                                 # Reference an existing Deployment using workloadRef field
    apiVersion: apps/v1
    kind: Deployment
    name: nginx
  strategy:
    canary:
      canaryService: nginx-preview  # required
      stableService: nginx-stable  # required
      # Metadata which will be attached to the canary pods. This metadata will
      # only exist during an update, since there are no canary pods in a fully
      # promoted rollout.
      canaryMetadata:
        labels:
          role: canary
      stableMetadata:
        labels:
          role: stable
      trafficRouting:
        smi:
          rootService: nginx-root # optional
      maxSurge: 1
      maxUnavailable: 0
      scaleDownDelaySeconds: 10
      #dynamicStableScale: true ## Canary dynamicStableScale cannot be used with scaleDownDelaySeconds
      steps:
      - setWeight: 25
      #- setHeaderRouting:
      #    match:
      #      - headerName: "X-Canary"
      #        headerValue:
      #          exact: "iwantsit"
      - pause:
          duration: 1h # 1 hour
      - setWeight: 50
      - pause: {} # pause indefinitely
      - setWeight: 75
      - pause: {} # pause indefinitely
