nginx-canary-smi/svc-root.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-root
spec:
  selector:
    app: nginx
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: web
