nginx-canary-smi/ing-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-preview
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nginx-preview-canary.labaq.life
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-preview
            port:
              number: 80
