nginx-canary-smi/ing-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-root
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nginx-root.labaq.life
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-root
            port:
              number: 80
