nginx-canary-smi/ing-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-stable
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nginx-stable-canary.labaq.life
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-stable
            port:
              number: 80
